--- a/scss/fontawesome.css
+++ b/scss/fontawesome.css
@@ -2,7 +2,6 @@
  * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap");
 .fa,
 .fas,
 .far,
@@ -6089,498 +6088,4 @@ readers do not read off random characters that represent icons */
   position: static;
   width: auto;
 }
-
-/*!
- * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
- * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- */
-@font-face {
-  font-family: 'Font Awesome 5 Free';
-  font-style: normal;
-  font-weight: 900;
-  font-display: block;
-  src: url("../webfonts/fa-solid-900.eot");
-  src: url("../webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-solid-900.woff2") format("woff2"), url("../webfonts/fa-solid-900.woff") format("woff"), url("../webfonts/fa-solid-900.ttf") format("truetype"), url("../webfonts/fa-solid-900.svg#fontawesome") format("svg");
-}
-
-.fa,
-.fas {
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-}
-
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  background: #f5f7fc;
-  color: #111414;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-family: "Montserrat", sans-serif;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-}
-
-.payment {
-  background-color: #ffffff;
-  border-radius: 10px;
-  padding: 2rem 3rem;
-  width: 60%;
-}
-
-.payment-sub {
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 2.8rem;
-}
-
-.payment-sub__title {
-  font-size: 2.3rem;
-  font-weight: bold;
-}
-
-.payment-sub__secure {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 0.4rem;
-}
-
-.payment-sub__secure p {
-  margin: 0 0 0 0.5rem;
-  padding: 0 0 0.2rem 0;
-}
-
-.payment-sub__secure-title {
-  font-size: 1rem;
-  font-weight: bold;
-}
-
-.payment-sub__secure-small {
-  color: #868686;
-  font-size: 0.8rem;
-  font-weight: 400;
-  padding-right: 1.5rem;
-}
-
-.payment-type {
-  border-bottom: 1px solid #e4e4e4;
-  list-style-type: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 0;
-  margin-top: 1rem;
-  margin-bottom: 1.8rem;
-  padding: 0;
-  width: 100%;
-}
-
-.payment-type__list {
-  color: #868686;
-  cursor: pointer;
-  display: inline-block;
-  padding-bottom: 1.5rem;
-  margin-right: 2.5rem;
-}
-
-.payment-type__list-active {
-  color: #111414;
-  border-bottom: 2px solid #111414;
-}
-
-.lock-icon {
-  margin-top: 0.2rem;
-}
-
-.logo-img {
-  height: auto;
-  width: 100px;
-}
-
-.navigation {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.user {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #edf1fa;
-  border-radius: 20px;
-  cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0 0 0 1.2rem;
-}
-
-.user-name {
-  font-size: 0.9rem;
-  margin: 0;
-  padding: 0.6rem 0;
-}
-
-.user-icon {
-  font-weight: 100;
-  margin-right: 0.5rem;
-}
-
-.user-img {
-  border-radius: 50%;
-  margin-left: 0.9rem;
-  height: 30px;
-  width: 30px;
-}
-
-.payment-details {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-}
-
-.blue-card {
-  background-color: #edf1fa;
-  color: #111414;
-}
-
-.brown-card {
-  background-color: #ffd280;
-  color: #111414;
-}
-
-.payment-card {
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  border-radius: 6px;
-  cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 130px;
-  padding: 0.5px 1rem;
-  margin-top: 1rem;
-  width: 260px;
-}
-
-.green-card {
-  background-color: #adf8ad;
-  color: #111414;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-
-.card-icon {
-  font-size: 1.8rem;
-  margin-bottom: 1rem;
-}
-
-.add-new-card {
-  color: #096b09;
-  font-size: 1.3rem;
-  position: relative;
-  bottom: 47%;
-  left: 70%;
-}
-
-.add-new-card-icon {
-  font-size: 1.3rem;
-}
-
-.payment-form {
-  margin-top: 3rem;
-}
-
-.form-group {
-  margin-bottom: 2.5rem;
-}
-
-.form-group label {
-  color: #868686;
-  display: block;
-  font-size: 0.8rem;
-  margin-bottom: 0.6rem;
-}
-
-.form-group input {
-  background-color: #edf1fa;
-  border: none;
-  border-radius: 4px;
-  color: #111414;
-  display: block;
-  font-size: 0.9rem;
-  padding: 1rem 1rem;
-  width: 100%;
-}
-
-input[type="date"]::-webkit-inner-spin-button,
-input[type="date"]::-webkit-calendar-picker-indicator {
-  display: none;
-  -webkit-appearance: none;
-}
-
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-  padding: 0;
-}
-
-/* Firefox */
-input[type="number"] {
-  -moz-appearance: textfield;
-}
-
-.form-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.form-row input {
-  width: 61%;
-}
-
-.form-row input[type="number"] {
-  width: 50%;
-}
-
-.cvv {
-  background: url("../img/visibility.svg") no-repeat;
-  background-position: 50px 15px;
-  background-size: 20px;
-}
-
-.action-btn {
-  margin-top: 0.5rem;
-}
-
-.btn {
-  border: none;
-  outline: none;
-  padding: 0.9rem 0;
-  width: 120px;
-}
-
-.confirm-btn {
-  background: #111414;
-  border: 1px solid #111414;
-  border-radius: 6px;
-  color: #ffffff;
-  margin-right: 0.8rem;
-}
-
-.cancel-btn {
-  background: #ffffff;
-  color: #868686;
-}
-
-.order {
-  padding: 0.5rem 3rem;
-  width: 40%;
-}
-
-.order-title {
-  font-size: 2rem;
-  margin-bottom: 2.5rem;
-}
-
-.order-steps {
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 3rem;
-}
-
-.order-step {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  margin-top: 2rem;
-}
-
-.order-step__sub, .order-step__step {
-  color: #868686;
-  margin: 0;
-  padding: 0.1rem 0;
-}
-
-.order-step__icon {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: red;
-  border-radius: 50%;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  font-size: 0.9rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 35px;
-  margin-right: 0.5rem;
-  width: 35px;
-}
-
-.order-step__icon-blue {
-  background: #dde4f5;
-}
-
-.order-step__icon-brown {
-  background: #ffd280;
-}
-
-.order-step__icon-green {
-  background: #adf8ad;
-}
-
-.order-step__step {
-  font-size: 0.8rem;
-}
-
-.order-step__sub {
-  font-size: 0.9rem;
-}
-
-.order-step__active {
-  color: #111414;
-}
-
-.order-lists {
-  list-style: none;
-  padding: 0;
-}
-
-.order-list {
-  margin-bottom: 1rem;
-}
-
-.order-list__tab {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background: #ffffff;
-  border-radius: 8px;
-  cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 42px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding: 0 1rem;
-}
-
-.order-list__title {
-  font-weight: 550;
-}
-
-.order-items {
-  padding: 2.5rem 1rem 2rem 1rem;
-}
-
-.order-item {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 1.3rem;
-}
-
-.order-item__name {
-  color: #6d6b6b;
-  font-size: 0.9rem;
-}
-
-.order-item__price {
-  font-weight: bold;
-  font-size: 0.9rem;
-}
-
-.order-final {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 3rem;
-}
-
-.order-final__amount {
-  font-size: 1.2rem;
-  font-weight: bold;
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=fontawesome.css.map */
